ordeerr servicede response data için gereken ilk parametre first() yerine get(0) şeklinde ayarlandı. arraylist first yok linkedlistte var